k8s/base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.36.0 (HEAD)
    labels:
        io.kompose.service: db
    name: db
    namespace: messenger-clone
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            annotations:
                kompose.cmd: kompose convert
                kompose.version: 1.36.0 (HEAD)
            labels:
                io.kompose.service: db
        spec:
            containers:
                - env:
                      - name: SQLD_NODE
                        value: primary
                  image: ghcr.io/tursodatabase/libsql-server:latest
                  name: libsql-db
                  ports:
                      - containerPort: 8080
                        protocol: TCP
                  volumeMounts:
                      - mountPath: /var/lib/sqld
                        name: db-claim0
            restartPolicy: Always
            volumes:
                - name: db-claim0
                  persistentVolumeClaim:
                      claimName: db-claim0
