k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.36.0 (HEAD)
    labels:
        io.kompose.service: frontend
    name: frontend
    namespace: messenger-clone
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: frontend
    template:
        metadata:
            annotations:
                kompose.cmd: kompose convert
                kompose.version: 1.36.0 (HEAD)
            labels:
                io.kompose.service: frontend
        spec:
            containers:
                - env:
                      - name: PUBLIC_API_URL
                        valueFrom:
                            secretKeyRef:
                                name: messenger-clone-envs
                                key: PUBLIC_API_URL
                      - name: SECRET_CLOUDINARY_API_KEY
                        valueFrom:
                            secretKeyRef:
                                name: messenger-clone-envs
                                key: CLOUDINARY_API_KEY
                      - name: SECRET_CLOUDINARY_API_SECRET
                        valueFrom:
                            secretKeyRef:
                                name: messenger-clone-envs
                                key: CLOUDINARY_API_SECRET
                      - name: SECRET_CLOUDINARY_CLOUD_NAME
                        valueFrom:
                            secretKeyRef:
                                name: messenger-clone-envs
                                key: CLOUDINARY_CLOUD_NAME
                      - name: SECRET_DATABASE_URL
                        valueFrom:
                            secretKeyRef:
                                name: messenger-clone-envs
                                key: DATABASE_URL
                  image: ghcr.io/myster987/messenger-clone-frontend:latest
                  name: frontend
                  ports:
                      - containerPort: 3000
                        protocol: TCP
            restartPolicy: Always
