k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.36.0 (HEAD)
    labels:
        io.kompose.service: backend
    name: backend
    namespace: messenger-clone
spec:
    ports:
        - name: "4000"
          port: 4000
          targetPort: 4000
    selector:
        io.kompose.service: backend
