k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.36.0 (HEAD)
    labels:
        io.kompose.service: frontend
    name: frontend
    namespace: messenger-clone
spec:
    ports:
        - name: "3000"
          port: 3000
          targetPort: 3000
    selector:
        io.kompose.service: frontend
